fixed overlap issue when reizing window

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ img {
     position: fixed;
     bottom: -40px;
     right: -50px; 
+    width: 30vw;
 }
 
 /* projects.html */
@@ -189,8 +190,10 @@ img {
     }
 
     img {
-        width: 55vw !important;     
-        bottom: -30px;
-        left: 200px;
+      position: fixed;
+      width: 55vw !important;     
+      bottom: -30px;
+      left: 200px;
+
     }
 }
